# llm-finetuning-platform

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
configs/: llama3_lora.yaml
tests/: test_train.py
